fixed header spacing in privacy policy

--- a/src/styles.css
+++ b/src/styles.css
@@ -110,6 +110,7 @@ router-outlet + * {
   position: relative;
   overflow-x: hidden;
   overflow-y: scroll;
+  scroll-behavior: smooth;
   perspective: 300px;
   perspective-origin: 50% 50%;
   /* border: 2px blue dashed; */
